fix layout issues

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -45,7 +45,7 @@ $white: hsl(0, 0%, 21%);
     @extend .title.is-4;
 
     color: #fff;
-    background: red;
+
   }
 
   &__name {
@@ -53,6 +53,6 @@ $white: hsl(0, 0%, 21%);
     @extend .subtitle;
 
     color: #fff;
-    background: yellow;
+
   }
 }
